# python-codeartifact-demo

./: .flake8  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements-cicd.txt
.github/actions/codeartifact-login-action/: action.yaml
.github/workflows/: ci-main.yaml  ci-pr.yaml  ci-publish.yaml  ci-release.yaml  ci-tag.yaml  ci.yaml  default-ci.yaml  default.yaml  poetry-build-test-quality-check.yaml  poetry-release.yaml  python-tag-release.yaml
python_codeartifact_demo/: __init__.py  app.py
src/python_codeartifact_demo/: app.py
tests/: test_sample.py
tests/python_codeartifact_demo/: test_sample.py
