[tool.poetry]
name = "python-codeartifact-demo"
version = "0.0.0"
description = "Github Actions CodeArtifact Demo"
authors = ["Dipanjan Kailthya <dipanjan.kailthya@gmail.com>"]
# Use identifier from https://spdx.org/licenses/
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dipanjank/python-codeartifact-demo"
repository = "https://github.com/dipanjank/python-codeartifact-demo"
documentation = "https://github.com/dipanjank/python-codeartifact-demo/blob/master/README.md"
classifiers = [
    # https://pypi.org/classifiers/
    "Development Status :: 1 - Planning",
]
[tool.poetry.urls]
# If you publish you package on PyPI, these will appear in the Project Links section.
"Bug Tracker" = "https://github.com/dipanjank/python-codeartifact-demo/issues"

[tool.poetry.dependencies]
python = ">=3.7"
PyYAML = "^5.4.1"
pyspark = ">=3, <4"

[tool.poetry-dynamic-versioning]
enable = true

[tool.poetry.dev-dependencies]
pytest = ">=7"

[tool.semantic_release]
branch = "main"
version_source = "tag_only"
upload_to_repository = false
build_command = "pipx install poetry && poetry build"

[build-system]
requires = ["poetry_core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry.core.masonry.api"

